fix(nav-settings.twig): subheader alignment with menu

--- a/css/itsm2.scss
+++ b/css/itsm2.scss
@@ -6,16 +6,13 @@
     --header-height: 3.5rem;
     --nav-open-width: 11rem;
     --nav-close-width: 5em;
-    --nav-transition-time: 0.3s;
+    --nav-transition-time: 0s;
     --menu-count: 10; //define in html
     --bubble_pos_x: 50%;
     --bubble_pos_y: 50%;
     --table-border-radius: 0;
     --nav-size: 1rem;
-}
-
-#page{
-    // display: none;
+    --nav-top-height: 0;
 }
 
 .main-container a {
@@ -82,6 +79,7 @@ header {
 }
 
 #subheader {
+    margin-top: var(--nav-top-height);
     a {
         font-size: var(--nav-size);
     }
